# WeSleep

./: .dockerignore  .env.example  .gitignore  Dockerfile  GUIA_ENDPOINTS_THUNDER.md  README.md  docker-compose.yml  payload.json  pyproject.toml
.agent/workflows/: wesleep.md
app/: config.py  database.py  logic.py  main.py  models.py
app/api/: api.py  deps.py
app/api/v1/endpoints/: alarm.py  wearable.py
app/core/: db.py  strategies.py
app/models/: raw_data.py
app/routers/: __init__.py  alarm.py  deps.py  wearable.py
app/schemas/: smart_alarm.py  wearable.py
app/services/: evaluator.py  parser.py  smart_alarm.py
tests/: test_endpoints_new.py  test_smart_alarm_manual.py
